--- a/styles/main.css
+++ b/styles/main.css
@@ -17,9 +17,9 @@
     display: flex;
     justify-content: space-between;
 }
-main{
+/* main{
     width: 1920px;
-}
+} */
 header{
     margin-top: 5px;
     width: 100%;
@@ -296,6 +296,7 @@ nav ul li img:last-child{
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 0 12px;
+    padding-bottom: 4px;
 }
 .sect-1-content-item-rating .stars{
     width: 70px;
@@ -303,10 +304,11 @@ nav ul li img:last-child{
     font-size: 15px;
     margin-top: 11.5px;
 }
-.sect-1-content-item-rating .stars i{
+.star-color{
     color: #1ABC9C;
-    fill: #1ABC9C;
-    stroke: #000;
+}
+.star-border{
+    color: #A1B1BC;
 }
 .sect-1-content-item h6{
     font-family: "Lato";
@@ -314,6 +316,7 @@ nav ul li img:last-child{
     color: #2C3E50;
     font-size: 18px;
     line-height: 33px;
+    margin-bottom: -3px;
 }
 .sect-1-content-item h4{
     font-family: "Lato";
@@ -456,7 +459,7 @@ nav ul li img:last-child{
     grid-row: 2 / 3;
     grid-column: span 1;
     background-color: #F9FBFB;
-    padding: 25px 40px 35px 30px;
+    padding: 25px 40px 35px 31px;
 }
 .sect-3-item-2-footer{
     grid-row: 3 / 3;
@@ -667,7 +670,7 @@ nav ul li img:last-child{
     display: none;
     position: absolute;
     width: 41px;
-    background-color: #DB6FD7;
+    background-color: #2C3E50;
     text-align: center;
     font-size: 20px;
     line-height: 35px;
@@ -688,6 +691,7 @@ nav ul li img:last-child{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding-bottom: 3px;
 }
 .sect-4-content-item-rating .stars{
     width: 70px;
@@ -706,6 +710,7 @@ nav ul li img:last-child{
     color: #2C3E50;
     font-size: 18px;
     line-height: 33px;
+    margin-bottom: -2px;
 }
 .sect-4-content-item h4{
     font-family: "Lato";
@@ -838,7 +843,7 @@ nav ul li img:last-child{
 }
 
 .sect-5-items-grid-6{
-    padding: 16px 15px 0 18px;
+    padding: 15px 15px 0 18px;
 }
 .sect-5-items-grid-6 h3{
     font-family: "Lato";
@@ -846,14 +851,13 @@ nav ul li img:last-child{
     font-weight: bold;
     line-height: 24px;
     color: #2C3E50;
-    margin-bottom: 1.4px;
 }
 .sect-5-items-grid-6 h5{
     font-family: "Lato";
     font-size: 15px;
     line-height: 24px;
     color: #34495E;
-    margin-bottom: 10px;
+    margin-bottom: 9px;
 }
 .sect-5-items-grid-6 p{
     font-family: "Lato";
@@ -896,7 +900,6 @@ nav ul li img:last-child{
 }
 .sect-6-arrows{
     position: relative;
-    width: 1520px;
     margin: auto;
 }
 .sect-6-arrows i{
@@ -1103,9 +1106,9 @@ nav ul li img:last-child{
     width: 60px;
 }
 .sect-7-box-2-item-5 .sect-7-float-right-p{
-    width: 464px;
+    width: 462px;
     float: right;
-    margin-bottom: 15px;
+    margin-bottom: 12px;
     margin-top: 3px;
     letter-spacing: -0.06px;
 }
@@ -1255,7 +1258,7 @@ nav ul li img:last-child{
     color: #fff;
     padding: 77px 0 0px 80px;
     height: 100%;
-    width: 640px;
+    width: 100%;
 }
 .sect-10-item h4{
     font-size: 15px;
@@ -1266,7 +1269,7 @@ nav ul li img:last-child{
 .sect-10-item p{
     font-size: 14px;
     line-height: 24.9px;
-    width: 488px;
+    /* width: 488px; */
     word-spacing: -.5px;
     margin-bottom: 20px;
 }
